--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ flavor: "R"
 # Most workshops don't use extra pages. More information about extra
 # pages are included in the README:
 # https://github.com/carpentries/workshop-template#creating-extra-pages
-title: "University of Miami Scientifc R Software Carpentry Workshop"
+title: "Scientifc Computing with R"
 
 
 #------------------------------------------------------------
